# KiwiEd

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  build.bat  build.sh  build_and_run.sh
dev/: build_and_run.sh  config.ini  ideas.txt  mockup.txt  run.sh  todo.txt
dev/icons/: svg2code.py  xclip
dev/ui_icons/actions/: codify.py  new.xcf  open.xcf  sources.txt  svg2code.py
manual/: README.md
res/: KiwiEd.rc  KiwiEd.xpm  resource.h
res/icons/actions/: new.xpm  open.xpm
src/: about.cpp  about.h  app.cpp  app.h  config.cpp  config.h  const.cpp  const.h  default_config.cpp  default_config.h  dlg_about.cpp  dlg_about.h  dlg_newlayer.cpp  dlg_newlayer.h  dlg_newmap.cpp  dlg_newmap.h  dlg_settings.cpp  dlg_settings.h  frm_kiwi.cpp  frm_kiwi.h  frm_log.cpp  frm_log.h  hardcoded.cpp  hardcoded.h  high_dpi.cpp  high_dpi.h  kiwi.cpp  kiwi.h  kiwied.h  map.cpp  map.h  svg_data.cpp  svg_data.h  util.cpp  util.h  win_kiwi.cpp  win_kiwi.h
src/res/: config_data.h  svg_data.h
src/ui/: dlg_about.cpp  dlg_about.h  dlg_newlayer.cpp  dlg_newlayer.h  dlg_newmap.cpp  dlg_newmap.h  dlg_settings.cpp  dlg_settings.h  frm_kiwi.cpp  frm_kiwi.h  frm_log.cpp  frm_log.h
util/: inject_config.py  update_versions.py
